Updated to Java 10